--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "expo": "~53.0.9",
-    "expo-av": "^15.1.4",
+    "expo": "53.0.10",
+    "expo-av": "15.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-web": "^0.20.0"
+    "react-native": "0.79.3",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-web": "^0.20.0",
+    "react-native-screens": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
